--- a/ch6/ch6-7.md
+++ b/ch6/ch6-7.md
@@ -1,10 +1,10 @@
-# 6.7 网易云WangYi
+# 6.7 华润云HuaRun
 
-WangYi是网易云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
+HuaRun是华润云的物联网平台，提供设备连接上云，帮助物联网行业用户快速完成设备联网及行业应用集成。
 
-在配置GC中IoTDA页面之前，需要在网易云的物联网平台配置获取连接参数（详细请参阅网易云相关说明）。
+在配置GC中IoTDA页面之前，需要在华润云物联网平台配置获取连接参数（详细请参阅华润云相关说明）。
 
-![网易云（WangYi）](assets/网易云（WangYi）.png)
+![华润云（HuaRun）](assets/华润云（HuaRun）.png)
 
-<center>网易云（WangYi）配置页面</center>
+<center>华润云（HuaRun）配置页面</center>
 
